[RX 7900 XTX] Helldivers 2 cause GPU reset
Description
It's been a real while since something caused GPU reset on my RX 7900 XTX, but recently released Helldivers 2 caused
Screenshots/video files
For rendering errors, attach screenshots of the problem and (if possible) of how it should look. For freezes, it may be useful to provide a screenshot of the affected game scene. Prefer screenshots over videos.
Log files (for system lockups / game freezes / crashes)
Steps to reproduce
How can Mesa developers reproduce the issue? When reporting a game issue, start explaining from a fresh save file and don't assume prior knowledge of the game's story.
Example:
Start the game
Seems like at a 30 minute mark it crashes with GPU reset
System information
Please post inxi -GSC -xx
output (fenced with triple backticks) OR fill information below manually
System:
Host: wasp-blackquiet.home.arpa Kernel: 6.7.4-200.fc39.x86_64 arch: x86_64
bits: 64 compiler: gcc v: 2.40-14.fc39
Desktop: KDE Plasma v: 5.27.10 tk: Qt v: 5.15.12 wm: kwin_wayland dm: SDDM
Distro: Fedora Linux 39 (KDE Plasma)
CPU:
Info: 12-core model: AMD Ryzen 9 5900X bits: 64 type: MT MCP arch: Zen 3+
rev: 0 cache: L1: 768 KiB L2: 6 MiB L3: 64 MiB
Speed (MHz): avg: 941 high: 3858 min/max: 550/5161 cores: 1: 550 2: 550
3: 550 4: 550 5: 3599 6: 550 7: 550 8: 550 9: 550 10: 550 11: 550 12: 550
13: 550 14: 550 15: 550 16: 550 17: 550 18: 550 19: 3599 20: 550 21: 550
22: 550 23: 3858 24: 550 bogomips: 177608
Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
Graphics:
Device-1: AMD Navi 31 [Radeon RX 7900 XT/7900 XTX/7900M]
vendor: Sapphire NITRO+ driver: amdgpu v: kernel arch: RDNA-3 pcie:
speed: 16 GT/s lanes: 16 ports: active: DP-1 empty: DP-2,HDMI-A-1,HDMI-A-2
bus-ID: 2f:00.0 chip-ID: 1002:744c
Device-2: Logitech C922 Pro Stream Webcam driver: snd-usb-audio,uvcvideo
type: USB rev: 2.0 speed: 480 Mb/s lanes: 1 bus-ID: 1-1.1:5
chip-ID: 046d:085c
Display: wayland server: X.org v: 1.20.14 with: Xwayland v: 23.2.4
compositor: kwin_wayland driver: X: loaded: amdgpu
unloaded: fbdev,modesetting,radeon,vesa dri: radeonsi gpu: amdgpu
display-ID: 0
Monitor-1: DP-1 res: 2560x1440 size: N/A
API: EGL v: 1.5 platforms: device: 0 drv: radeonsi device: 1 drv: swrast
surfaceless: drv: radeonsi wayland: drv: radeonsi x11: drv: radeonsi
inactive: gbm
API: OpenGL v: 4.6 compat-v: 4.5 vendor: amd mesa v: 24.0.0 glx-v: 1.4
direct-render: yes renderer: AMD Radeon RX 7900 XTX (radeonsi navi31 LLVM
17.0.6 DRM 3.57 6.7.4-200.fc39.x86_64) device-ID: 1002:744c
display-ID: :0.0
API: Vulkan v: 1.3.268 surfaces: xcb,xlib,wayland device: 0
type: discrete-gpu driver: mesa radv device-ID: 1002:744c device: 1
type: cpu driver: mesa llvmpipe device-ID: 10005:0000
If applicable
-
Xserver version: (
sudo X -version
):X.Org X Server 1.20.14 X Protocol Version 11, Revision 0 Build Operating System: 6.6.9-100.fc38.x86_64 Current Operating System: Linux wasp-blackquiet.home.arpa 6.7.4-200.fc39.x86_64 #1 SMP PREEMPT_DYNAMIC Mon Feb 5 22:21:14 UTC 2024 x86_64 Kernel command line: BOOT_IMAGE=(hd5,gpt2)/vmlinuz-6.7.4-200.fc39.x86_64 root=UUID=966b8ddc-2e31-44b0-8d68-83f2c9885569 ro rhgb quiet amd_pstate=active amdgpu.ppfeaturemask=0xffffffff Build Date: 19 January 2024 12:00:00AM Build ID: xorg-x11-server 1.20.14-30.fc39 Current version of pixman: 0.42.2 Before reporting problems, check http://wiki.x.org to make sure that you have the latest version.
-
DXVK version:
-
Wine/Proton version: Proton Hotfix